Update: Criando o inimigo para colidir com o passaro